<resources>
    <string name="set_light_theme">浅色主题</string>
    <string name="set_dark_theme">深色主题</string>
    <string name="app_name">268V检测客户端</string>
    <string name="action_settings">Settings</string>
    <string name="quit">确定退出？</string>
    <string name="alert_title">提示</string>
    <string-array name="existornot">
        <item>有</item>
        <item>无</item>
    </string-array>
    <string-array name="yes_no">
        <item>是</item>
        <item>否</item>
    </string-array>
    <string-array name="no_yes">
        <item>否</item>
        <item>是</item>
        <item>看不见</item>
    </string-array>
    <string name="itemImage">itemImage</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="choose">选择</string>
    <string name="prompt">请选择</string>
    <string name="upload_procedure">提交</string>
    <string name="procedure_input">手续录入</string>
    <string name="vin">VIN编码：</string>
    <string name="brand">厂牌型号：</string>
    <string name="ci">车辆信息</string>
    <string name="ci_licence_type">行驶证品牌型号：</string>
    <string name="ci_car_type">行驶证车辆类型：</string>
    <string-array name="ci_car_type_arrays">
        <item>微型客车</item>
        <item>小型客车、轿车</item>
        <item>中型客车</item>
        <item>大型客车</item>
    </string-array>
    <string-array name="ci_car_color_arrays">
        <item>黑</item>
        <item>白</item>
        <item>蓝</item>
        <item>红</item>
        <item>银</item>
        <item>金</item>
        <item>绿</item>
        <item>灰</item>
        <item>紫</item>
        <item>黄</item>
        <item>橙</item>
        <item>粉</item>
        <item>其他</item>
    </string-array>
    <string name="ci_first_log_time">初次登记时间：</string>
    <string name="ci_car_number">牌照号码：</string>
    <string name="ci_car_color">车身颜色：</string>
    <string name="ci_manufacture_time">出厂日期：</string>
    <string name="ci_run">表显里程：</string>
    <string name="ci_kilometer">万公里</string>
    <string name="ci_vin_number">车架号码（VIN）：</string>
    <string name="ci_engine_number">发动机号：</string>
    <string name="ci_seller_name">卖方姓名（单位）：</string>
    <string name="ci_seller_id_number">卖方有效证件号：</string>
    <string name="ci_seller_phone_number">卖方联系电话：</string>
    <string name="ci_owner_name">车主姓名（单位）:</string>
    <string name="ci_owner_id_number">车主有效证件号：</string>
    <string name="ci_owner_phone_number">车主联系电话：</string>
    <string name="ci_consignor_name">委托人姓名：</string>
    <string name="ci_consignor_id_number">委托人有效证件号：</string>
    <string name="ci_consignor_phone_number">委托人联系电话：</string>
    <string name="ci_id">身份证</string>
    <string name="ci_coc">组织机构代码和公章</string>
    <string name="ci_id_matches_ci">身份证和车辆信息基本一致</string>
    <string name="ci_reg_location">注册地：</string>
    <string-array name="ci_province">
        <item>北京市</item>
        <item>天津市</item>
        <item>重庆市</item>
        <item>上海市</item>
        <item>河北省</item>
        <item>山西省</item>
        <item>辽宁省</item>
        <item>吉林省</item>
        <item>黑龙江省</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>安徽省</item>
        <item>福建省</item>
        <item>江西省</item>
        <item>山东省</item>
        <item>河南省</item>
        <item>湖北省</item>
        <item>湖南省</item>
        <item>广东省</item>
        <item>海南省</item>
        <item>四川省 </item>
        <item>贵州省 </item>
        <item>云南省 </item>
        <item>陕西省</item>
        <item>甘肃省 </item>
        <item>青海省</item>
        <item>台湾省</item>
        <item>内蒙古自治区蒙古</item>
        <item>广西壮族自治区</item>
        <item>宁夏回族自治区</item>
        <item>新疆维吾尔自治区</item>
        <item>西藏自治区</item>
        <item>香港特别行政区</item>
        <item>澳门特别行政区</item>
    </string-array>
    <string-array name="ci_province_abbreviation">
        <item>京</item>
        <item>津</item>
        <item>渝</item>
        <item>沪</item>
        <item>冀</item>
        <item>晋</item>
        <item>辽</item>
        <item>吉</item>
        <item>黑</item>
        <item>苏</item>
        <item>浙</item>
        <item>皖</item>
        <item>闽</item>
        <item>赣</item>
        <item>鲁</item>
        <item>豫</item>
        <item>鄂</item>
        <item>湘</item>
        <item>粤</item>
        <item>琼</item>
        <item>川</item>
        <item>黔</item>
        <item>滇</item>
        <item>陕</item>
        <item>甘 </item>
        <item>青</item>
        <item>台</item>
        <item>内蒙古</item>
        <item>桂</item>
        <item>宁</item>
        <item>新</item>
        <item>藏</item>
        <item>港</item>
        <item>澳</item>
    </string-array>
    <string name="ci_transfer_count">过户次数：</string>
    <string name="ci_last_transfer_time">最后过户时间：</string>
    <string name="ci_violated">违章记录：</string>
    <string name="ci_violated_point">|罚扣：</string>
    <string name="ci_point">分</string>
    <string name="ci_violated_money">|罚款：</string>
    <string name="ci_money">元</string>
    <string name="ci_use">使用性质：</string>
    <string-array name="ci_use_items">
        <item>非营运</item>
        <item>营运</item>
        <item>营转非</item>
        <item>租赁</item>
    </string-array>
    <string name="ci_last_use">原使用方：</string>
    <string-array name="ci_last_use_items">
        <item>个人</item>
        <item>单位使用车辆</item>
        <item>汽车出租公司</item>
        <item>汽车租赁公司</item>
        <item>汽车销售（服务）公司</item>
    </string-array>
    <string name="ci_ported">是否进口：</string>
    <string name="ci_buy_way">购买方式：</string>
    <string-array name="ci_buy_way_items">
        <item>海关罚没</item>
        <item>境外自带</item>
        <item>海关进口</item>
    </string-array>
    <string name="ci_ported_certification">进口关单：</string>
    <string name="ci_business_check_certification">商检单：</string>
    <string name="ci_car_plate">车身铭牌：</string>
    <string name="ci_pictures">实车与行驶本照片：</string>
    <string name="ci_attention">注意！</string>
    <string name="ci_attention_content">常见实车与行驶本照片不符现象包含：</string>
    <string name="ci_attention_content1">1. 主要是外观不符：中网改装、前杠改装、私改天窗、轮毂改装为赛车、私改车身颜色；</string>
    <string name="ci_attention_content2">2. 常见车型：奥拓、菱帅</string>
    <string name="ci_attention_content3">以上信息请运营人员仔细核查</string>
    <string name="ci_attention_content4">实车与行驶本照片：</string>
    <string name="ci_attention_match">相符</string>
    <string name="ci_attention_notmatch">不符</string>
    <string name="ci_attention_done">确定</string>
    <string name="title_activity_procedure_input_certifications">MainActivity</string>
    <string name="ct">手续</string>
    <string name="ct_drive_licence">行驶证：</string>
    <string name="ct_log_licence">登记证：</string>
    <string name="ct_buy_tickets">购车发票：</string>
    <string-array name="ct_tickets">
        <item>有票有工商章</item>
        <item>有票无工商章</item>
        <item>过户票</item>
        <item>无</item>
    </string-array>
    <string name="ct_extra_tax_certification">附加税证：</string>
    <string-array name="ct_extra_tax_certification_type">
        <item>有-征税</item>
        <item>有-免税</item>
        <item>无</item>
    </string-array>
    <string name="ct_maintain_manual">保养手册：</string>
    <string name="ct_vehicle_and_vessel_tax_ticket">车船税票：</string>
    <string name="ct_backup_tire">备胎</string>
    <string-array name="ct_backup_tire_items">
        <item>有</item>
        <item>无</item>
        <item>未见</item>
    </string-array>
    <string name="ct_backup_key">备用钥匙：</string>
    <string name="ct_yearly_check_available_date">年检有效期：</string>
    <string name="ct_mandatory_vehicle_insurance">：</string>
    <string name="ct_available_date">交强险有效期：</string>
    <string name="ct_business_insurance">商业保险：</string>
    <string-array name="ct_business_insurance_type">
        <item>有-随车出售</item>
        <item>有-不随车出售</item>
        <item>无</item>
    </string-array>
    <string name="ct_business_insurance_area">商险地域：</string>
    <string-array name="ct_business_insurance_area_type">
        <item>本市</item>
        <item>外地</item>
    </string-array>
    <string name="ct_business_insurance_money">商险金额：</string>
    <string name="ct_business_insurance_available_date">商险有效期：</string>
    <string name="ct_business_insurance_company">商险公司：</string>
    <string-array name="ct_business_insurance_companies">
        <item>人保</item>
        <item>太保</item>
        <item>平安</item>
        <item>华泰</item>
        <item>太平</item>
        <item>中华</item>
        <item>永安</item>
        <item>天安</item>
        <item>大地</item>
        <item>华安</item>
        <item>安邦</item>
        <item>永诚</item>
        <item>阳光</item>
        <item>都邦</item>
        <item>渤海</item>
        <item>天平</item>
        <item>安华</item>
        <item>华农财险</item>
        <item>人寿财险</item>
        <item>民安</item>
        <item>中银保险</item>
        <item>浙商财保</item>
        <item>紫金保险</item>
    </string-array>
    <string name="ct_business_insurance_content">商险内容：</string>
    <string-array name="ct_business_insurance_contents">
        <item>车损</item>
        <item>不计免赔</item>
        <item>划痕险</item>
        <item>盗抢险</item>
        <item>自燃险</item>
        <item>玻璃单独破碎险</item>
        <item>司乘险</item>
        <item>涉水险</item>
        <item>其他</item>
    </string-array>
    <string name="ct_ported_procedure">进口车手续：</string>
    <string-array name="ct_ported_prodecure_items">
        <item>大贸</item>
        <item>小贸</item>
    </string-array>
    <string name="ct_car_from">车辆来源：</string>
    <string name="ct_car_code">|代码：</string>
    <string name="ct_car_code_minimum">|最小值：</string>
    <string name="ct_car_code_float">浮动</string>
    <string name="ct_car_code_fixed">固定</string>
    <string name="ct_car_seller">|销售人员：</string>
    <string name="ct_car_property">车辆属性：</string>
    <string-array name="ct_car_properties">
        <item>C2B</item>
        <item>4S店C2B</item>
        <item>商户C2B</item>
    </string-array>
    <string name="ct_car_exchange">置换需求：</string>
    <string name="ct_car_exchange_type">置换车型：</string>
    <string name="ex">交易</string>
    <string name="ex_exchange_type">过户要求：</string>
    <string-array name="ex_exchange_types">
        <item>本市过户</item>
        <item>外迁过户</item>
        <item>不限(无补贴)</item>
        <item>不限(有补贴)</item>
    </string-array>
    <string name="ex_city_presell_money">本市预售价：</string>
    <string name="camera">拍摄照片</string>
    <string name="comment">备注</string>
    <string name="bi">基本信息</string>
    <string name="bi_vin_number">车架号码（VIN）：</string>
    <string name="bi_car_model">车辆型号：</string>
    <string name="bi_log_time">登记日期：</string>
    <string name="bi_manufacture_time">出厂日期：</string>
    <string name="bi_car_color">车身颜色：</string>
    <string name="bi_car_number">牌照号码：</string>
    <string name="bi_run">表显里程：</string>
    <string name="bi_kilometer">万公里</string>
    <string name="bi_engine_number">发动机号：</string>
    <string name="csi">配置信息</string>
    <string name="csi_add">添加</string>
    <string name="csi_volume">排量：</string>
    <string name="csi_drive_type">驱动方式：</string>
    <string name="csi_gear_type">变速器形式：</string>
    <string name="cbi">车型基本信息</string>
    <string name="cbi_lwh">长宽高：</string>
    <string name="cbi_camera">拍摄其他组照片</string>
    <string name="cbi_comment">过户要求说明：</string>
    <string name="ac_l">右前翼子板</string>
    <string name="ac_m">引擎盖</string>
    <string name="ac_d">左前翼子板</string>
    <string name="ac_e">左前门</string>
    <string name="ac_f">左后门</string>
    <string name="ac_h">行李箱盖</string>
    <string name="ac_j">右后门</string>
    <string name="ac_k">右前门</string>
    <string name="action_cancel">取消</string>
    <string name="action_done">完成</string>
    <string name="action_connect">连接设备</string>
    <string name="action_transfer_data">传输数据</string>
    <string name="out_color_diff">  色差</string>
    <string name="out_scratch">  划痕</string>
    <string name="out_trans">  变形</string>
    <string name="out_scrape">  刮蹭</string>
    <string name="action_clear">清除</string>
    <string name="action_undo">撤销</string>
    <string name="action_redo">恢复</string>
</resources>