<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TableLayout android:layout_height="wrap_content"
                 android:layout_width="match_parent">
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_l"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_m"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_d"/>
        </TableRow>
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_e"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_f"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_h"/>
        </TableRow>
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_j"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_k"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      />
        </TableRow>
    </TableLayout>
</LinearLayout>