<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_undo"
          android:icon="@drawable/undo"
          android:title="@string/action_undo"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_redo"
          android:icon="@drawable/redo"
          android:title="@string/action_redo"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_clear"
          android:icon="@drawable/scan"
          android:title="@string/action_clear"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_cancel"
          android:icon="@drawable/cancel"
          android:title="@string/action_cancel"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_done"
          android:icon="@drawable/done"
          android:title="@string/action_done"
          android:orderInCategory="100"
          android:showAsAction="ifRoom"/>
</menu>
