<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TableLayout android:layout_height="wrap_content"
                 android:layout_width="match_parent">
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_l"
                      android:textSize="18sp"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_m"
                      android:textSize="18sp"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_d"
                      android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_e"
                      android:textSize="18sp"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_f"
                      android:textSize="18sp"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_h"
                      android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_j"
                      android:textSize="18sp"/>
            <CheckBox android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/ac_k"
                      android:textSize="18sp"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>