<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_transfer_data"
          android:title="@string/action_transfer_data"
          android:icon="@drawable/transfer"
          android:orderInCategory="100"
          android:visible="false"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_show_devices"
          android:title="@string/action_connect"
          android:icon="@drawable/show_device_list"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_cancel"
          android:title="@string/action_cancel"
          android:icon="@drawable/cancel"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_done"
          android:title="@string/action_done"
          android:icon="@drawable/done"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
</menu>
