<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CarWaitingListActivity">

    <ScrollView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp">
        <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp">
            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/bi"
                        style="@style/CodeFont"/>
            </TableRow>
            <TableRow>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:background="?android:attr/listDivider"
                        android:layout_weight="1"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_vin_number"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/bi_vin_number_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/bi_vin_number"
                        android:layout_weight="2"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_car_model"
                        android:layout_weight="2"
                        android:textSize="18sp"/>
                <EditText android:id="@+id/bi_car_model_edit"
                         android:layout_height="wrap_content"
                         android:layout_width="0dp"
                         android:layout_weight="3"/>
                <Button android:id="@+id/bi_car_model_button"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/choose"
                        android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_log_time"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/bi_log_time_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/bi_log_time"
                        android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_manufacture_time"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/bi_manufacture_time_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/bi_manufacture_time"
                        android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_car_color"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText android:id="@+id/bi_car_color_edit"
                         android:layout_height="wrap_content"
                         android:layout_width="0dp"
                         android:layout_weight="2"
                         android:hint="@string/bi_car_color"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_car_number"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText android:id="@+id/bi_car_number_edit"
                          android:layout_height="wrap_content"
                          android:layout_width="0dp"
                          android:layout_weight="2"
                          android:hint="@string/bi_car_number"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_run"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/bi_run_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/bi_run"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_kilometer"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/bi_engine_number"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/bi_engine_number_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/bi_engine_number"
                        android:layout_weight="2"/>
            </TableRow>


            <TableRow>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/csi"
                        style="@style/CodeFont"
                        android:layout_weight="5"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/csi_add"/>
            </TableRow>
            <TableRow>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:background="?android:attr/listDivider"
                        android:layout_weight="1"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/csi_volume"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/csi_volumn_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/csi_volume"
                        android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/csi_drive_type"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <Spinner
                        android:id="@+id/csi_drive_type_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:entries="@array/csi_drive_type_item"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/csi_gear_type"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <Spinner
                        android:id="@+id/csi_gear_type_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:entries="@array/csi_gear_type_item"/>
            </TableRow>

            <TableRow>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/cbi"
                        style="@style/CodeFont"/>
            </TableRow>
            <TableRow>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:background="?android:attr/listDivider"
                        android:layout_weight="1"
                        />
            </TableRow>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/cbi_lwh"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:id="@+id/cbi_lwh_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:hint="@string/cbi_lwh"
                        android:layout_weight="2"/>
            </TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/CodeFont"
                    android:text="@string/camera" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="3px"
                    android:background="?android:attr/listDivider"/>
            <TableRow>
                <Button android:id="@+id/cbi_start_camera_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cbi_camera"
                        android:drawableRight="@drawable/camera"
                        android:onClick="cbi_start_camera"/>
            </TableRow>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/CodeFont"
                    android:text="@string/comment" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="3px"
                    android:background="?android:attr/listDivider"/>
            <TableRow>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/cbi_comment"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:hint="@string/cbi_comment"
                        android:id="@+id/editText"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
