<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/out_radio_group"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
    <RadioButton android:id="@+id/out_color_diff_radio"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/out_color_diff"
                 android:text="@string/out_color_diff"
                 android:checked="true"/>
    <RadioButton android:id="@+id/out_scratch_radio"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/out_scratch"
                 android:text="@string/out_scratch"/>
    <RadioButton android:id="@+id/out_trans_radio"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/out_trans"
                 android:text="@string/out_trans"/>
    <RadioButton android:id="@+id/out_scrape_radio"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/out_scrape"
                 android:text="@string/out_scrape"/>
    <RadioButton android:id="@+id/out_other_radio"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/out_other"
                 android:text="@string/out_other"/>
</RadioGroup>
